--- a/index.scss
+++ b/index.scss
@@ -6,11 +6,11 @@ $secondary-color: #125688;
 // Css del proyecto Platzigram
 body {
   background: #fafafa;
-  color: #125688;
+  color: $secondary-color;
   font-family: Montserrat;
 }
 
-#main-container {
+.landing {
   margin: 30px auto;
 }
 
@@ -32,9 +32,10 @@ body {
   text-align: center;
 }
 
-.signup-box .platzigram {
+.platzigram {
   font-family: 'Oleo Script';
   font-size: 42px;
+  color: $secondary-color !important;
 }
 
 .signup-form {
@@ -57,5 +58,16 @@ body {
 }
 
 .signup-form .btn.btn-signup {
-  background-color: #125688;
+  background-color: $secondary-color;
+}
+
+.header {
+  background-color: white;
+  color: $secondary-color;
+  box-shadow: none;
+  border-bottom: 1px solid #edeeee;
+}
+
+.timeline {
+  padding: 30px 0;
 }
