--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ html
     head
         link(href="https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script" rel="stylesheet")
         link(rel="stylesheet" type="text/css" href="app.css")
+        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous")
 
         link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
         link(rel='apple-touch-icon', sizes='60x60', href='/apple-icon-60x60.png')
