Agregando la funcionalidad de like

--- a/public/app.css
+++ b/public/app.css
@@ -6990,5 +6990,15 @@ body {
 .card i {
   font-size: 30px; }
 
-.card .fa-heart {
+.card .far.fa-heart {
   color: #125688; }
+
+.card .fas.fa-heart {
+  color: #f44336;
+  display: none; }
+
+.card.liked .fas.fa-heart {
+  display: block; }
+
+.card.liked .far.fa-heart {
+  display: none; }
